--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,22 @@
-version: '3.3'
-
-networks:
-  drupal:
-
+version: "3.7"
 services:
-  drupal:
-    image: drupal:latest
-    ports:
-      - 80:80
-    volumes:
-      - ./www:/var/www/html      
-    restart: always
+  coldfusion:
+    image: eaps-docker-coldfusion.bintray.io/cf/coldfusion:latest
+    container_name: coldfusion
+    hostname: coldfusion
     networks:
-        - drupal
-
-  mysql:
-    image: mysql:5.7.29
-    container_name: mysql
-    restart: unless-stopped
-    tty: true
+      - coldfusion
     ports:
-      - "3306:3306"
+      - "80:8500"
+    volumes:
+      - "./www:/app"
     environment:
-      MYSQL_DATABASE: drupal
-      MYSQL_USER: user
-      MYSQL_PASSWORD: pass
-      MYSQL_ROOT_PASSWORD: secret
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
-    volumes:
-      - ./db-data:/var/lib/mysql  
-    networks:
-      - drupal
-
+      acceptEULA: "YES"
+      password: "C0ldFusi0n"
+      enableSecureProfile: "false"
+    healthcheck:
+      test: curl -f http://localhost/
+      interval: 1m
+      timeout: 3s    
+networks:
+  coldfusion:
