readme.md explicativo

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ PHP_VERSION=7.2.17-apache
 
 # MySQL Options
 MYSQL_VERSION=5.7
-MYSQL_USER=enyse
-MYSQL_PASSWORD=0E%CX4o9d
-MYSQL_DATABASE=enyse
+MYSQL_USER=user
+MYSQL_PASSWORD=password
+MYSQL_DATABASE=database
 MYSQL_ROOT_PASSWORD=root
